--- a/service-depot-user.properties
+++ b/service-depot-user.properties
@@ -7,7 +7,7 @@ management.endpoints.health.show-details=always
 management.info.git.mode=full
 
 # Configuration pour l'enregistrement du service dans Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://192.168.137.183:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 spring.cloud.discovery.enabled=true
