--- a/serviceDemande.properties
+++ b/serviceDemande.properties
@@ -7,7 +7,7 @@ management.info.git.mode=full
 
 
 #configuration pour le service 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://192.168.137.183:8761/eureka
 #eureka permet darriver au panneau d'enregistrement
 eureka.instance.prefer-ip=true
 eureka.client.register-with-eureka=true
