--- a/serviceRetrait.properties
+++ b/serviceRetrait.properties
@@ -25,7 +25,7 @@ spring.rabbitmq.password=guest
 
 
 #spring.rabbitmq.template.exchange=validation-exchange
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=192.168.137.166
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=serviceRetrait
 
