--- a/serviceAnnonce.properties
+++ b/serviceAnnonce.properties
@@ -24,7 +24,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
-spring.data.mongodb.host=192.168.137.183
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=serviceAnnonce
 
