--- a/serviceRetrait.properties
+++ b/serviceRetrait.properties
@@ -18,14 +18,14 @@ spring.cloud.discovery.enable=true
 # configuration  du service pour communiquer avec rabbitmq
 #localhost car cest en local
 
-spring.rabbitmq.host=192.168.137.166
+spring.rabbitmq.host=192.168.137.183
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
 #spring.rabbitmq.template.exchange=validation-exchange
-spring.data.mongodb.host=192.168.137.166
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=serviceRetrait
 
