--- a/seviceTransaction.properties
+++ b/seviceTransaction.properties
@@ -14,7 +14,7 @@ eureka.client.register-with-eureka=true
 spring.cloud.discovery.enabled=true
 
 # Configuration pour RabbitMQ
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=192.168.137.183
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
